--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "projectContext": "Server=(localdb)\\mssqllocaldb;Database=projectContext-da4d1613-5ce9-47bd-ae4b-67a4f14038d2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
